[package]
name = "rome"
version = "0.1.2"
authors = ["Jos van den Oever <jos@vandenoever.info>"]
license = "AGPL-3.0"
description = "An RDF library in pure Rust"
homepage = "https://github.com/vandenoever/rome"
repository = "https://github.com/vandenoever/rome"
documentation = "https://www.vandenoever.info/rust/rome/"

[dependencies]
# for the library
lazy_static = "^0.2.8"
nom = "^4.0"
rand = "0.3.16"
regex = "0.2.2"
clippy = {version = "0.0.158", optional = true}

# for the examples
time = "0.1.38"

[features]
default = []

# Unstable parts of this crate are hidden behind this feature.
# There are no API guarantees for the functionality exposed by this feature.
unstable = []

[profile.release]
debug = true

[profile.bench]
debug = true
