[package]
name = "rome"
version = "0.1.2"
authors = ["Jos van den Oever <jos@vandenoever.info>"]
license = "AGPL-3.0"
description = "An RDF library in pure Rust"
homepage = "https://github.com/vandenoever/rome"
repository = "https://github.com/vandenoever/rome"
documentation = "https://www.vandenoever.info/rust/rome/"

[dependencies]
# for the library
lazy_static = "1"
nom = "4"
rand = "0.5"
regex = "1"
clippy = {version = "0.0.302", optional = true}

# for the examples
time = "0.1"

[features]
default = []

# Unstable parts of this crate are hidden behind this feature.
# There are no API guarantees for the functionality exposed by this feature.
unstable = []

[profile.release]
debug = true

[profile.bench]
debug = true
