[package]
name = "rome"
version = "0.1.3"
authors = ["Jos van den Oever <jos@vandenoever.info>"]
license = "AGPL-3.0"
description = "An RDF library in pure Rust"
homepage = "https://github.com/vandenoever/rome"
repository = "https://github.com/vandenoever/rome"
documentation = "https://www.vandenoever.info/rust/rome/"
edition = "2018"

[dependencies]
# for the library
lazy_static = "1"
nom = "5"
rand = "0.5"
regex = "1"

# for the examples
chrono = "0.4"

[features]
default = []

# Unstable parts of this crate are hidden behind this feature.
# There are no API guarantees for the functionality exposed by this feature.
unstable = []

[profile.release]
debug = true
lto = true

[profile.bench]
debug = true
